--- a/Audio/index.html
+++ b/Audio/index.html
@@ -30,11 +30,11 @@
         div {
             position: fixed;
             width: 100%;
-            height: 100%;
+            height: 50%;
             left: 50%;
             bottom: 0%;
             transform: translate(-50%,0%);
-            background: linear-gradient( rgba(255,255,255,0),#ffffff);
+            background: linear-gradient(rgba(255,255,255,0),rgba(255,255,255,0.8));
             opacity: 1;
             transition: opacity 0.033s, height 0.033s, width 0.033s;
             z-index: 0;
