--- a/test.html
+++ b/test.html
@@ -2,5 +2,5 @@
 <title>test</title>
 </head>
 <body>
-<a href="decinproject.000webhostapp.com/UnityChan/index.html">UnityChan</a>
+<a href="http://decinproject.000webhostapp.com/UnityChan/index.html">UnityChan</a>
 </body>
