--- a/decenpiano/index.html
+++ b/decenpiano/index.html
@@ -16,15 +16,27 @@
 </head>
 
 <body>
-  <div class="display-header">
-    <div class="display-mode-container">
-      <div class="display__title">
+  <div class="slide-show">
+    <div class="slide-container">
+      <div class="display__mode display__title">
         <h1 id="display__title__note">Decen piano</h1>
       </div>
-      <div class="display__title">
-          <h1 id="display__title__note">Decen piano</h1>
+      <div class="display__mode display__keyboard">
+        <!-- <img src="img/keyboard.png" alt="keyboard" /> -->
+        <div class="display__keyboard-container">
+          <div id="display_keyboard">
+            <div id="left_key"></div>
+            <div id="home_arrow_key"></div>
+            <div id="numpad_key">
+                <div id="num_key"></div>
+                <div id="sign_key"></div>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
+    <button class="button-reset slide-button slide-left">&lt;</button>
+    <button class="button-reset slide-button slide-right">&gt;</button>
   </div>
   <div class="keyboard" id="keyboard"></div>
   <div id="input"></div>
